2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: date_to_str() is always called with negativ set
	to "never", remove this argument.
	* src/usermod.c: Added missing cast for gr_free argument.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwconv.c: Fail if not called correctly.
	* src/pwconv.c: At the end of main, the passwd and shadow files
	are locked. No need to check before unlocking.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newusers.c: Initially set the passwd's password to '*'
	instead of 'x'. Only when it is confirmed that a shadow entry is
	(will be) added, set the passwd's password to 'x'.
	* src/newusers.c: An invalid line is an error. A failure needs to
	be reported.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: Remove log_gpasswd_success_gshadow(). Writing in
	gshadowis the last sub-task.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chsh.c: No needto remove lines tarting with '#' from
	/etc/shells. This is already done by getusershell() and these
	shell would fail the access(X_OK) test.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/generate_mans.mak: Fix the generation of translated man
	pages. xml2po removed the comment from empty headers and the
	config was no more inserted.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chage.1.xml: The LOGIN argument is not optional.
	* man/login.defs.d/QUOTAS_ENAB.xml: Document the dependency
	between /etc/limits and QUOTAS_ENAB.

2011-08-20  Nicolas François  <nicolas.francois@centraliens.net>

	* po/POTFILES.in: Added lib/spawn.c.

2011-08-20  Jonathan Nieder  <jrnieder@gmail.com>

	* lib/Makefile.am: Added lib/spawn.c and lib/spawn.h.
	* lib/nscd.c, lib/spawn.c, lib/spawn.h: It is not possible to
	differentiate between an nscd failure, and a failure to execute